creusot/tests/should_fail/prusti/zombie_type_param/type.stderr
error: Unsatisfied bound creusot_contracts::prusti::Zombie<std::boxed::Box<u32>>: Trait
  --> type.rs:12:11
   |
12 | #[ensures(MyOp::Some(x) != MyOp::None)]
   |           ^^^^^^^^^^^^^

error: aborting due to 1 previous error

